[project]
name = "real-time-fraud-detection-feast"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.124.4",
    "feast>=0.57.0",
    "numpy>=2.3.5",
    "pandas>=2.3.3",
    "pyarrow>=21.0.0",
    "pydantic>=2.10.6",
    "redis>=7.1.0",
    "uvicorn>=0.34.0",
]

[dependency-groups]
dev = [
    "httpx>=0.27.0",
    "pre-commit>=4.5.0",
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.1.0",
    "pytest-mock>=3.12.0",
]
